--- a/index.html
+++ b/index.html
@@ -51,27 +51,27 @@
                 <div class="skills-category">
                     <h3>Languages Known</h3>
                     <div class="skill-item fade-in" data-delay="0.2s">
-                        <img src="images/c_logo.png" alt="C Logo">
+                        <img src="clogo.png" alt="C Logo">
                         <p>C</p>
                     </div>
                     <div class="skill-item fade-in" data-delay="0.4s">
-                        <img src="images/cpp_logo.png" alt="C++ Logo">
+                        <img src="cpp.png" alt="C++ Logo">
                         <p>C++</p>
                     </div>
                     <div class="skill-item fade-in" data-delay="0.6s">
-                        <img src="images/java_logo.png" alt="Java Logo">
+                        <img src="java-logo.png" alt="Java Logo">
                         <p>Java</p>
                     </div>
                     <div class="skill-item fade-in" data-delay="0.8s">
-                        <img src="images/html_logo.png" alt="HTML Logo">
+                        <img src="images/html5-logo.png" alt="HTML Logo">
                         <p>HTML</p>
                     </div>
                     <div class="skill-item fade-in" data-delay="1s">
-                        <img src="images/css_logo.png" alt="CSS Logo">
+                        <img src="logo-css3-1536.png" alt="CSS Logo">
                         <p>CSS</p>
                     </div>
                     <div class="skill-item fade-in" data-delay="1.2s">
-                        <img src="images/js_logo.png" alt="JavaScript Logo">
+                        <img src="JavaScript-Emblem.png" alt="JavaScript Logo">
                         <p>JavaScript</p>
                     </div>
                 </div>
@@ -114,21 +114,21 @@
             <h2 class="projects-heading">Projects</h2>
             <div class="portfolio-grid">
                 <div class="portfolio-item fade-in" data-delay="0.5s">
-                    <img src="images/personal_blog_project.jpg" alt="Personal Blog">
+         <!--           <img src="images/personal_blog_project.jpg" alt="Personal Blog"> -->
                     <div class="project-info">
                         <h3>Personal Blog Website</h3>
                         <p>A platform I created to showcase my front-end skills using HTML and CSS.</p>
                     </div>
                 </div>
                 <div class="portfolio-item fade-in" data-delay="0.7s">
-                    <img src="images/evenlitez_project.jpg" alt="Evenlitez Platform">
+          <!--          <img src="images/evenlitez_project.jpg" alt="Evenlitez Platform"> -->
                     <div class="project-info">
                         <h3>Evenlitez Platform</h3>
                         <p>A web-based platform demonstrating responsive design and user experience.</p>
                     </div>
                 </div>
                 <div class="portfolio-item fade-in" data-delay="0.9s">
-                    <img src="images/personal_website_project.jpg" alt="Personal Website">
+              <!--      <img src="images/personal_website_project.jpg" alt="Personal Website"> -->
                     <div class="project-info">
                         <h3>Personal Website</h3>
                         <p>This website was developed using HTML, CSS, and JavaScript to showcase my skills and projects in a visually appealing manner.</p>
